OldStuff/tests/copies/newAndNeedChangeTests/fail/Or.java
package fail;

import java.lang.System;

public class Or {

  public static void main(String[] args ) {
    "hello" || true;
  }

}
